--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -35,32 +35,32 @@
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person.jpg" alt="Card image">
         <div class="card-body">
           <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p>Jack Smith</p>
+          <p class="card-text"> I have 15 yers of experience selling cars. </p>
+          <p>JS1@gmail.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person2.jpg" alt="Card image">
         <div class="card-body">
           <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p>Cathy Anderson</p>
+          <p class="card-text">I have 10 yers of experience selling cars.</p>
+          <p>CA@yaho.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person.jpg" alt="Card image">
         <div class="card-body">
           <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p>Mark Sullivan</p>
+          <p class="card-text">I have 13 yers of experience selling cars.</p>
+          <p>MS@gmail</p>
         </div>
       </div>
     </div>
